# LP_egzamino_alternatyva

./: .gitignore  cpp_main.7z  run.sh
cpp_main/: CMakeLists.txt
cpp_main/configs/: caf_config.hpp
cpp_main/data/: IFF-2_5_StankaitisM_L1a_dat_1.json  IFF-2_5_StankaitisM_L1a_dat_2.json  IFF-2_5_StankaitisM_L1a_dat_3.json  output.txt  output1.txt  output2.txt  output3.txt  test.json  test1.json  test2.json  test3.json  test4.json
cpp_main/inc/: actor_interfaces.hpp  actor_traits.hpp  main_actor.hpp  main_state.hpp  movie.hpp  printer_state.hpp  receiver_state.hpp  results_collector_state.hpp  sender_state.hpp  worker_state.hpp
cpp_main/src/: main.cpp  main_actor.cpp  main_state.cpp  printer_state.cpp  receiver_state.cpp  results_collector_state.cpp  sender_state.cpp  worker_state.cpp
python_helper/: main.py  receiver.py
